--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   </head>
   <body>
     <!-- Шапка страницы -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
-          <!-- Логотип компании -->
+          
           <a class="header-logo logos link" href="./index.html"
             >Web<span class="header-logos logos link">Studio</span></a
           >
-          <!-- Основные страницы сайта-->
+         
           <ul class="header-list list">
             <li class="header-list__item">
               <a class="links link active current" href="./index.html">Студия</a>
@@ -65,16 +65,16 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-- Главный контент страницы-->
     <main>
       <!-- Основа-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero__item">эффективное решение для вашего бизнеса</h1>
           <button class="btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
-      </section>
+      </section> -->
 
       <section class="hang">
         <div class="container">
@@ -128,32 +128,49 @@
           </ul>
         </div>
       </section>
-      <section class="main">
+      <!-- <section class="main">
         <div class="container">
           <h2 class="main__title">Чем мы занимаемся</h2>
           <ul class="main-list list">
-            <li class="main-list__item">
+            <li class="main__item">
               <img src="./images/img1.jpg" alt="Рабочее пространство" width="370" />
-              <p class="main-list__text">Десктопные приложения</p>
+              <p class="main__text">Десктопные приложения</p>
             </li>
-            <li class="main-list__item">
+            <li class="main__item">
               <img src="./images/img2.jpg" alt="Рабочее пространство" width="370" />
-              <p class="main-list__text">Мобильные приложения</p>
+              <p class="main__text">Мобильные приложения</p>
             </li>
-            <li class="main-list__item">
+            <li class="main__item">
               <img src="./images/img3.jpg" alt="Рабочее пространство" width="370" />
-              <p class="main-list__text">Дизайнерские решения</p>
+              <p class="main__text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <section class="team section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
-            <li class="team-list__item">
-              <img src="./images/img4.jpg" alt="Сотрудник команды" width="270" />
-              <div class="team-list__main-text">
+            <li class="team__item">
+              <picture>
+                <source
+                  srcset="./images/team/person1.jpg 1x, ./images/team/person1-desktop@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/person1-tablet@1x.jpg 1x,
+                    ./images/team/person1-tablet@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team/person1-mob@1x.jpg 1x, ./images/team/person1-mob@2x.jpg 2x"
+                  media="(min-width:480px)"
+                />
+                <img src="./images/team/person1.jpg" alt="персонал1" class="team__pictures" />
+              </picture>
+              <div class="team__main-text">
                 <h3 class="team-list__title">Игорь Демьяненко</h3>
                 <p class="team-list__text" lang="en">Product Designer</p>
                 <ul class="team-social-list list">
@@ -188,9 +205,26 @@
                 </ul>
               </div>
             </li>
-            <li class="team-list__item">
-              <img src="./images/img5.jpg" alt="Сотрудник команды" width="270" />
-              <div class="team-list__main-text">
+            <li class="team__item">
+              <picture>
+                <source
+                  srcset="./images/team/person2.jpg 1x, ./images/team/person2-desktop@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/person2-tablet@1x.jpg 1x,
+                    ./images/team/person2-tablet@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team/person2-mob@1x.jpg 1x, ./images/team/person2-mob@2x.jpg 2x"
+                  media="(min-width:480px)"
+                />
+                <img src="./images/team/person2.jpg" alt="персонал1" class="team__pictures" />
+              </picture>
+              <div class="team__main-text">
                 <h3 class="team-list__title">Ольга Репина</h3>
                 <p class="team-list__text" lang="en">Frontend Developer</p>
                 <ul class="team-social-list list">
@@ -225,9 +259,26 @@
                 </ul>
               </div>
             </li>
-            <li class="team-list__item">
-              <img src="./images/img6.jpg" alt="Сотрудник команды" width="270" />
-              <div class="team-list__main-text">
+            <li class="team__item">
+              <picture>
+                <source
+                  srcset="./images/team/person3.jpg 1x, ./images/team/person3-desktop@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/person3-tablet@1x.jpg 1x,
+                    ./images/team/person3-tablet@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team/person3-mob@1x.jpg 1x, ./images/team/person3-mob@2x.jpg 2x"
+                  media="(min-width:480px)"
+                />
+                <img src="./images/team/person3.jpg" alt="персонал1" class="team__pictures" />
+              </picture>
+              <div class="team__main-text">
                 <h3 class="team-list__title">Николай Тарасов</h3>
                 <p class="team-list__text" lang="en">Marketing</p>
                 <ul class="team-social-list list">
@@ -262,9 +313,26 @@
                 </ul>
               </div>
             </li>
-            <li class="team-list__item">
-              <img src="./images/img7.jpg" alt="Сотрудник команды" width="270" />
-              <div class="team-list__main-text">
+            <li class="team__item">
+              <picture>
+                <source
+                  srcset="./images/team/person4.jpg 1x, ./images/team/person4-desktop@2x.jpg 2x"
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/person4-tablet@1x.jpg 1x,
+                    ./images/team/person4-tablet@2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
+                <source
+                  srcset="./images/team/person4-mob@1x.jpg 1x, ./images/team/person4-mob@2x.jpg 2x"
+                  media="(min-width:480px)"
+                />
+                <img src="./images/team/person4.jpg" alt="персонал1" class="team__pictures" />
+              </picture>
+              <div class="team__main-text">
                 <h3 class="team-list__title">Михаил Ермаков</h3>
                 <p class="team-list__text" lang="en">UI Designer</p>
                 <ul class="team-social-list list">
@@ -304,57 +372,57 @@
       </section>
     </main>
     <!-- Постоянные клиенты-->
-    <section class="clients">
+    <!--  <section class="clients">
       <div class="container">
         <h2 class="clients-title">Постоянные клиенты</h2>
         <ul class="clients-list list">
-          <li class="clients-list__item">
-            <a href="" class="clients-list__link">
-              <svg class="clients-list__icon">
+          <li class="clients__item">
+            <a href="" class="clients__link">
+              <svg class="clients__icon">
                 <use href="./images/icons.svg#icon-our-clients"></use>
               </svg>
             </a>
           </li>
-          <li class="clients-list__item">
-            <a href="" class="clients-list__link">
-              <svg class="clients-list__icon">
+          <li class="clients__item">
+            <a href="" class="clients__link">
+              <svg class="clients__icon">
                 <use href="./images/icons.svg#icon-our-clients-2"></use>
               </svg>
             </a>
           </li>
-          <li class="clients-list__item">
-            <a href="" class="clients-list__link">
-              <svg class="clients-list__icon">
+          <li class="clients__item">
+            <a href="" class="clients__link">
+              <svg class="clients__icon">
                 <use href="./images/icons.svg#icon-our-clients-3"></use>
               </svg>
             </a>
           </li>
-          <li class="clients-list__item">
-            <a href="" class="clients-list__link">
-              <svg class="clients-list__icon">
+          <li class="clients__item">
+            <a href="" class="clients__link">
+              <svg class="clients__icon">
                 <use href="./images/icons.svg#icon-our-clients-4"></use>
               </svg>
             </a>
           </li>
-          <li class="clients-list__item">
-            <a href="" class="clients-list__link">
-              <svg class="clients-list__icon">
+          <li class="clients__item">
+            <a href="" class="clients__link">
+              <svg class="clients__icon">
                 <use href="./images/icons.svg#icon-our-clients-5"></use>
               </svg>
             </a>
           </li>
-          <li class="clients-list__item">
-            <a href="" class="clients-list__link">
-              <svg class="clients-list__icon">
+          <li class="clients__item">
+            <a href="" class="clients__link">
+              <svg class="clients__icon">
                 <use href="./images/icons.svg#icon-our-clients-6"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <!-- Подвал сайта-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="contact-information">
           <a class="header-logo-footer logos link" href="./index.html"
@@ -362,15 +430,15 @@
           >
           <address class="adress">
             <ul class="footer-list list">
-              <li class="footer-list__item">г. Киев, пр-т Леси Украинки, 26</li>
+              <li class="footer__item">г. Киев, пр-т Леси Украинки, 26</li>
 
-              <li class="footer-list__mail-item">
-                <a class="footer-list__mail footer-links link" href="mailto:info@example.com"
+              <li class="footer__mail-item">
+                <a class="footer__mail footer-links link" href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
               <li>
-                <a class="footer-list__tel footer-links link" href="tel:+380991111111"
+                <a class="footer__tel footer-links link" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
               </li>
@@ -380,30 +448,30 @@
         <div class="footer-adress-social">
           <p class="footer-social-title">Присоединяйтесь</p>
           <ul class="footer-social-list list">
-            <li class="footer-social-list__item">
-              <a href="" class="footer-social-list__link">
-                <svg class="footer-social-list__icon" width="20" height="20">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link">
+                <svg class="footer-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list__item">
-              <a href="" class="footer-social-list__link"
-                ><svg class="footer-social-list__icon" width="20" height="20">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link"
+                ><svg class="footer-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list__item">
-              <a href="" class="footer-social-list__link"
-                ><svg class="footer-social-list__icon" width="20" height="20">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link"
+                ><svg class="footer-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list__item">
-              <a href="" class="footer-social-list__link"
-                ><svg class="footer-social-list__icon" width="20" height="20">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link"
+                ><svg class="footer-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -434,7 +502,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
