Add portfolio and other things

--- a/index.html
+++ b/index.html
@@ -67,15 +67,10 @@
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
-          <svg
-            class="open-btn__svg"
-            width="20"
-            height="20"
-            aria-label="Переключатель мобильного меню"
-          >
+          <svg class="open-btn__svg" width="20" height="20" aria-label="Мобильное меню">
             <use
               class="open-btn_icon mob-menu__icon"
-              href="./images/menu-icon/symbol-defs.svg#icon-menu"
+              href="./images/menu-icon/symbol-defs.svg#icon-close"
             ></use>
           </svg>
         </button>
@@ -85,26 +80,26 @@
               <svg class="close-btn__svg" width="20" height="20">
                 <use
                   class="close-btn__icon mob-menu__icon"
-                  href="./images/menu-icon/symbol-defs.svg#icon-close"
+                  href="./images/menu-icon/symbol-defs.svg#icon-menu"
                 ></use>
               </svg>
             </button>
             <div class="mob-menu__box">
-              <ul class="mob-navigation__list">
+              <ul class="mob-navigation__list list">
                 <li class="mob-navigation__item">
-                  <a class="mob-navigation__link mob-navigation__link--curent" href="./index.html"
+                  <a class="mob-navigation__link mob-navigation__link--current" href="./index.html"
                     >Студия</a
                   >
                 </li>
                 <li class="mob-navigation__item">
-                  <a class="mob-navigation__link" href="./portfolio.html">Портфолио</a>
+                  <a class="mob-navigation__link link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="mob-navigation__item">
                   <a class="mob-navigation__link" href="">Контакты</a>
                 </li>
               </ul>
               <div class="mob-menu__contacts">
-                <ul class="mob-contact__list">
+                <ul class="mob-contact__list list">
                   <li class="mob-contact__item">
                     <a class="mob-contact__link mob-contact__link--color" href="tel:+380961111111"
                       >+38 096 111 11 11</a
@@ -116,7 +111,7 @@
                     >
                   </li>
                 </ul>
-                <ul class="mob-social__list">
+                <ul class="mob-social__list list">
                   <li class="mob-social__item">
                     <a href="" class="mob-social__link">Instagram</a>
                   </li>
@@ -484,7 +479,7 @@
       </section>
     </main>
     <!-- Постоянные клиенты-->
-    <!--  <section class="clients">
+    <section class="clients">
       <div class="container">
         <h2 class="clients-title">Постоянные клиенты</h2>
         <ul class="clients-list list">
@@ -532,89 +527,90 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     <!-- Подвал сайта-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
-        <div class="contact-information">
-          <a class="header-logo-footer logos link" href="./index.html"
-            >Web<span class="footer-logos logos link">Studio</span></a
-          >
-          <address class="adress">
-            <ul class="footer-list list">
-              <li class="footer__item">г. Киев, пр-т Леси Украинки, 26</li>
+        <div class="footer__mob-tab">
+          <div class="contact-information">
+            <a class="header-logo-footer logos link" href="./index.html"
+              >Web<span class="footer-logos logos link">Studio</span></a
+            >
+            <address class="adress">
+              <ul class="footer-list list">
+                <li class="footer__item">г. Киев, пр-т Леси Украинки, 26</li>
 
-              <li class="footer__mail-item">
-                <a class="footer__mail footer-links link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <li class="footer__mail-item">
+                  <a class="footer__contact footer-links link" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="footer__mail-item">
+                  <a class="footer__contact footer-links link" href="tel:+380991111111"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-adress-social">
+            <p class="footer-social-title">Присоединяйтесь</p>
+            <ul class="footer-social-list list">
+              <li class="footer-social__item">
+                <a href="" class="footer-social__link">
+                  <svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a class="footer__tel footer-links link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+              <li class="footer-social__item">
+                <a href="" class="footer-social__link"
+                  ><svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social__item">
+                <a href="" class="footer-social__link"
+                  ><svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social__item">
+                <a href="" class="footer-social__link"
+                  ><svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer-adress-social">
-          <p class="footer-social-title">Присоединяйтесь</p>
-          <ul class="footer-social-list list">
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link"
-                ><svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link"
-                ><svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__link"
-                ><svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="modal-adress-social">
-          <p class="footer-social-title">Подпишитесь на рассылку</p>
-          <form action="#" class="modal-form">
+          <form action="#" class="sign-up__form">
             <div class="modal-form-field-email">
-              <label for="user-email" class="modal-input-text-email">
-                <input
-                  type="email"
-                  name="user-email"
-                  class="modal-input-email"
-                  placeholder="E-mail"
-                  id="user-email"
-                  required="required"
-                />
-              </label>
+              <!--   <p class="footer-social-title"></p> -->
 
-              <button type="submit" class="btn-input modal-btn">
-                Подписаться<svg class="input-btn-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
+              <label for="user-email" class="footer-social-title"> Подпишитесь на рассылку</label>
+              <input
+                type="email"
+                name="user-email"
+                class="modal-input-email"
+                placeholder="E-mail"
+                id="user-email"
+                required="required"
+              />
             </div>
+            <button type="submit" class="btn-input modal-btn">
+              Подписаться<svg class="input-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
