--- a/index.html
+++ b/index.html
@@ -590,8 +590,6 @@
         <div class="modal-adress-social">
           <form action="#" class="sign-up__form">
             <div class="modal-form-field-email">
-              <!--   <p class="footer-social-title"></p> -->
-
               <label for="user-email" class="footer-social-title"> Подпишитесь на рассылку</label>
               <input
                 type="email"
@@ -611,6 +609,7 @@
         </div>
       </div>
     </footer>
+    <!-- Модалка-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
