--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <ul class="header-contacts list">
           <li class="header-contacts__item">
-            <a class="contacts__item link-one link" href="mailto:info@devstudio.com">
+            <a class="contacts__item first link" href="mailto:info@devstudio.com">
               <svg class="header-social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
@@ -54,7 +54,7 @@
           </li>
 
           <li class="header-contacts__item">
-            <a class="contacts__item link-two link" href="tel:+380961111111"
+            <a class="contacts__item second link" href="tel:+380961111111"
               ><svg class="header-social-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-telephone"></use>
               </svg>
@@ -692,8 +692,8 @@
               <a href="#" class="modal-important-text">Условия договора</a>
             </label>
           </div>
-          <button type="submit" class="btn modal-btn">Отправить</button>
         </form>
+        <button type="submit" class="btn modal-btn">Отправить</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
