Final add fix portfolio and main page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                     >
                   </li>
                   <li class="mob-contact__item">
-                    <a class="mob-contact__link" href="mailto:info@devstudio.com"
+                    <a
+                      class="mob-contact__link mob-contact__link--color"
+                      href="mailto:info@devstudio.com"
                       >info@devstudio.com</a
                     >
                   </li>
@@ -688,8 +690,10 @@
                   <use href="./images/icons.svg#icon-check-box"></use>
                 </svg>
               </span>
-              Соглашаюсь с рассылкой и принимаю
-              <a href="#" class="modal-important-text">Условия договора</a>
+              <div>
+                Соглашаюсь с рассылкой и принимаю
+                <a href="#" class="modal-important-text">Условия договора</a>
+              </div>
             </label>
           </div>
         </form>
